syntax = "proto3";

package scow.ai;

import "google/protobuf/timestamp.proto";

message Dataset {
  uint32 id = 1;
  string name = 2;
  string owner = 3;
  string type = 4;
  string scene = 5;
  optional string description = 6;
  bool is_shared = 7;
  google.protobuf.Timestamp create_time = 8;
}

message CreateDatasetRequest {
  string name = 1;
  string owner = 2;
  string type = 3;
  string scene = 4;
  string description = 5;
}

message CreateDatasetResponse {
  uint32 id = 1;
}

message ListDatasetRequest {
  // if undefined, page is 1
  optional uint32 page = 1;
  // if undefined or 0, page_size is 10
  optional uint64 page_size = 2;
  optional string type = 3;
  optional string name = 4;
  optional string owner = 5;
  optional bool is_shared = 6;
}

message ListDatasetResponse {
  repeated Dataset results = 1;
  uint32 total_count = 2;
}

service DatasetService {
  rpc CreateDataset (CreateDatasetRequest) returns (CreateDatasetResponse);
  rpc ListDataset (ListDatasetRequest) returns (ListDatasetResponse);
}
